...
                            viewModel.updateSnackbarVisuals("请检查空项")
                            return@Button
                        }
                    }
                    viewModel.iconGeneration(icon?.absolutePath ?: return@Button)
                }) {
                    Text("开始制作")
                }
            }
        }
    }
}

...
                visible = viewModel.iconFactoryInfoState.icon != null,
                modifier = Modifier.padding(bottom = 16.dp, end = 16.dp).align(Alignment.End)
            ) {
                ExtendedFloatingActionButton(
                    onClick = { showBottomSheet.update { true } },
                    expanded = true,
                    icon = { Icon(Icons.Rounded.Tune, "更多设置") },
                    text = { Text("更多设置") })
            }
        }
        if (showBottomSheet.value) {
            ModalBottomSheet(modifier = Modifier.fillMaxHeight().align(Alignment.BottomEnd),
                sheetState = sheetState,
...
        modifier = Modifier.fillMaxSize().padding(bottom = 20.dp, end = 14.dp),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        item {
            Spacer(Modifier.size(8.dp))
            FolderInput(value = viewModel.iconFactoryInfoState.outputPath,
                label = "图标输出路径",
                isError = false,
                onValueChange = { path ->
                    viewModel.updateIconFactoryInfo(viewModel.iconFactoryInfoState.copy(outputPath = path))
                })
        }
        item {
...
