...
                                }
                            }
                        }) {
                            val rotate by animateFloatAsState(if (sheetState.currentValue == SheetValue.Expanded) 180f else 0f)
                            Icon(
                                imageVector = Icons.Rounded.KeyboardArrowUp,
                                contentDescription = "KeyboardArrowUp",
                                modifier = Modifier.rotate(rotate)
                            )
                        }
                    }
                }
            }
...
